fix overflow

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,6 +1,5 @@
 .navbar {
   background-color: #fff;
-  position: relative;
 }
 .navbar-nav .nav-item .nav-link {
   font-weight: 600;
@@ -13,7 +12,7 @@
 }
 .cart-icon {
   position: fixed;
-  right: 20px;
+  right: 5px;
   top: 10px;
   background-color: green;
   width: 35px;
